--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,18 +3,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.pm1er201910050084">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.SET_WALLPAPER" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" />
@@ -24,12 +23,15 @@
 
     <queries>
 
-        <!-- Browser
+        <!--
+        Browser
         <intent>
             <action android:name="android.intent.action.VIEW" />
 
             <data android:scheme="http" />
-        </intent> -->
+        </intent>
+        -->
+
 
         <!-- Camera -->
         <intent>
@@ -42,8 +44,6 @@
         </intent>
     </queries>
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -54,6 +54,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Pm1er201910050084"
         tools:targetApi="31">
+        <activity
+            android:name=".ActivityLista"
+            android:exported="false" />
         <activity
             android:name=".ActivityPrincipal"
             android:exported="false" />
